--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>Start template</title>
+	<title>Тутукон</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,27 +19,52 @@
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
 
-	<!-- <link rel="stylesheet" href="css/bootstrap-grid.min.css"> -->
+
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.min.css">
 
 </head>
 <body>
 
-	<section class="section-first">
+	<header class="header">
 		<div class="container">
-			First-section
+			<div class="header__contacts">
+				<div class="header__contacts-tel">
+					<span>Інформаційна лінія:</span>
+					<a href="tel:8 800 000000">8 800 000000</a>
+				</div>
+				<div class="header__contacts-social">
+					<a class="header__contacts-fb" href="#"></a>
+					<a class="header__contacts-ins" href="#"></a>
+				</div>
+			</div>
+			<div class="header__bottom">
+				<div class="header__bottom-left">
+					<div class="header__bottom-img">
+						<img src="img/header-img.png" alt="Тутукон">
+						<div class="header__bottom-img-text">РП № UA/13218/01/01 від 21.11.2019 №2319</div>
+					</div>
+				</div>
+				<div class="header__bottom-right">
+					<div class="header__title"><img src="img/logo.svg" alt="Тутукон"></div>
+					<div class="header__title-1">для лікування та профілактики</div>
+					<div class="header__title-2">
+						Сечокам’яної хвороби <br>
+						та інфекцій<br>
+						сечовивідних шляхів
+					</div>
+					<div class="header__title-3">Сучасний комплексний рослинний препарат</div>
+					<div class="header__buttons">
+						<div class="header__btn"><a href="#" class="button">Де придбати</a></div>
+						<div class="header__btn"><a href="#" class="button">Консультація з лікарем</a></div>
+					</div>
+				</div>
+			</div>
 		</div>
-	</section>
-
-	<section class="section-second">
-		<div class="container">
-			Second-section
-		</div>
-	</section>
+	</header>
 
 	
-	<!-- <script src="js/jquery-3.4.1.min.js"></script> -->
+	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/common.js"></script>
 
 </body>
