Finish desctop home.html

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,9 @@
 <body>
 
 	<header class="header">
+		<div class="header__plant">
+			<img src="img/header-bg-plant.png" alt="Тутукон">
+		</div>
 		<div class="container">
 			<div class="header__contacts">
 				<div class="header__contacts-tel">
@@ -37,6 +40,10 @@
 					<a class="header__contacts-fb" href="#"></a>
 					<a class="header__contacts-ins" href="#"></a>
 				</div>
+				<ul class="header__language">
+					<li class="active"><a href="#">рус</a></li>
+					<li><a href="#">/укр</a></li>
+				</ul>
 			</div>
 			<div class="header__bottom">
 				<div class="header__bottom-left">
@@ -63,6 +70,281 @@
 		</div>
 	</header>
 
+	<section class="target">
+		<div class="container">
+			<div class="section-title">
+				<img src="img/logo.svg" alt="Тутукон"> - НОВИЙ ПІДХІД В ЛІКУВАННІ ТА ПРОФІЛАКТИЦІ Сечокам’яної хвороби  та інфекцій сечовивідних шляхів
+			</div>
+			<div class="target__subtitle">Допоможе впоратися з такими проблемами:</div>
+			<div class="target__center">
+				<div class="target__img">
+					<img src="img/target-center.png" alt="Тутукон">
+				</div>
+				<div class="target__block">
+					<img src="img/target-block.png" alt="Тутукон">
+				</div>
+				<ul class="target__list target__list-left">
+					<li>Профілактика утворення каменів (метафілактика)</li>
+					<li>Стан після стентування сечоводів</li>
+					<li>Сечокислий діатез: <br><span>фосфатурія, оксалатурія, урікурія</span></li>
+					<li>Гіперурикурія при подагрі</li>
+					<li>Реактивний сечовий міхур</li>
+				</ul>
+				<ul class="target__list target__list-right">
+					<li>Сечокам’яна хвороба: <br> <span>урати, оксалати, фосфати,
+						карбонати</span></li>
+					<li>Цистит, уретрит, пієлонефрит <br> <span>у дорослих,
+						дітей старше 5 років та <br> вагітних жінок</span></li>
+					<li>Безсимтомна бактеріурія вагітних</li>
+					<li>Стан після літотрипсії</li>
+				</ul>
+			</div>
+			<div class="target__row">
+				<div class="target__item">
+					<div class="target__item-img item-1">
+						<div class="target__item-round"></div>
+					</div>
+					<div class="target__item-title">ДОВЕДЕНА ЕФЕКТИВНІСТЬ:</div>
+					<div class="target__item-text">рецептура винайдена
+						в Іспанії більш ніж 90 років тому</div>
+				</div>
+				<div class="target__item">
+					<div class="target__item-img item-2">
+						<div class="target__item-round"></div>
+					</div>
+					<div class="target__item-title">УНІКАЛЬНА ТЕХНОЛОГІЯ:</div>
+					<div class="target__item-text">забезпечує максимальну концентрацію
+						діючих речовин та їхню користь</div>
+				</div>
+				<div class="target__item">
+					<div class="target__item-img  item-3">
+						<div class="target__item-round"></div>
+					</div>
+					<div class="target__item-title">УНІКАЛЬНА ФОРМА ВИПУСКУ:</div>
+					<div class="target__item-text">на водній основі, без спирту та цукру.</div>
+					<div class="target__item-mark">Безпечна при діабеті, <br>
+						для дітей та вагітних</div>
+				</div>
+				<div class="target__line"></div>
+			</div>
+		</div>
+	</section>
+
+	<section class="effect">
+		<div class="effect__plant top">
+			<img src="img/effect-plant-top.png" alt="Тутукон">
+		</div>
+		<div class="effect__plant bottom">
+			<img src="img/effect-plant-bottom.png" alt="Тутукон">
+		</div>
+		<div class="container">
+			<div class="section-title">
+				<img src="img/logo.svg" alt="Тутукон"> - СУЧАСНИЙ ЛІКАРСЬКИЙ ЗАСІБ З НАУКОВО ДОВЕДЕНИМИ ТЕРАПЕВТИЧНИМИ  ЕФЕКТАМИ
+			</div>
+			<div class="effect__top">
+				<div class="effect__top-left">лікарськи	рослин</div>
+				<div class="effect__arrow-wrap">
+					<img src="img/effect-arrow-left.svg" alt="Тутукон">
+				</div>
+				<div class="effect__top-mid">
+					<div class="target__counter">
+						<div class="target__counter-round"></div>
+						<div class="target__counter-number">8</div>
+					</div>
+				</div> 
+				<div class="effect__arrow-wrap">
+					<img src="img/effect-arrow-right.svg" alt="Тутукон">
+				</div>
+				<div class="effect__top-right">ефектів</div>
+			</div>
+			<div class="effect__bottom">
+				<ul class="effect__list left">
+					<li>Хвощ польовий<span></span></li>
+					<li>Торичник червоний<span></span></li>
+					<li>Болдо листя<span></span></li>
+					<li>Опунція інжирова<span></span></li>
+					<li>Залізниця вузьколиста<span></span></li>
+					<li>Розмарин аптечний<span></span></li>
+					<li>Бермудська трава<span></span></li>
+					<li>Меліса аптечна<span></span></li>
+				</ul>
+				<div class="effect__bottom-img">
+					<img src="img/effect-img.png" alt="Тутукон">
+				</div>
+				<ul class="effect__list right">
+					<li>Літолітичний<span></span></li>
+					<li>Протизапальний<span></span></li>
+					<li>Діуретичний<span></span></li>
+					<li>Антибактеріальний<span></span></li>
+					<li>Спазмолітичний<span></span></li>
+					<li>Антиоксидантний<span></span></li>
+					<li>Антитоксичний<span></span></li>
+					<li>Нефропротекторний<span></span></li>
+
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="prevention">
+		<div class="container">
+			<div class="section-title">
+				<img src="img/logo.svg" alt="Тутукон"> - новий підхід для лікування та профілактики сечокам’яної хвороби та інфекцій сечовивідних шляхів
+			</div>
+			<div class="prevention__top">
+				<div class="prevention__top-item">
+					<ul class="prevention__list">
+						<li><span></span>Зменшує розмір каменів природнім шляхом</li>
+						<li><span></span>Покращує їх самостійне виведення</li>
+						<li><span></span>Виводить «пісок» з нирок</li>
+						<li><span></span>Запобігає утворенню нових каменів</li>
+						<li><span></span>Збільшує сечовиділення</li>
+					</ul>
+				</div>
+				<div class="prevention__top-item">
+					<ul class="prevention__list">
+						<li><span></span>Проявляє антибактеріальні властивості</li>
+						<li><span></span>Усуває запалення в сечовидільній системі</li>
+						<li><span></span>Побавляє спазму і болю</li>
+						<li><span></span>Відновлює клітини нирок</li>
+						<li><span></span>Виводить токсини з організму</li>
+					</ul>
+				</div>
+			</div>
+			<div class="prevention__bottom">
+				<div class="prevention__bottom-left">
+					<div class="target__center">
+						<div class="target__img">
+							<img src="img/target-center.png" alt="Тутукон">
+						</div>
+						<div class="target__block">
+							<img src="img/target-block.png" alt="Тутукон">
+						</div>
+					</div>
+				</div>
+				<div class="prevention__bottom-right">
+					<div class="prevention__head">
+						<div class="prevention__head-title">Як приймати <img src="img/logo.svg" alt="Тутукон"> ?</div>
+						<div class="prevention__head-btn"><a href="#" class="button">Інструкція</a></div>
+					</div>
+					<div class="prevention__subtitle">застосовують внутрішньо <b>3 рази</b> на добу <b>за 30 хвилин</b> до вживання їжі</div>
+					<div class="prevention__table">
+						<div class="prevention__table-row">
+							<div class="prevention__table-col">Вагітні та жінки, які годують груддю</div>
+							<div class="prevention__table-col">по 20 мл 7-10 діб</div>
+						</div>
+						<div class="prevention__table-row">
+							<div class="prevention__table-col">Діти віком 5–7 років</div>
+							<div class="prevention__table-col">по 5–10 мл 7-10 діб</div>
+						</div>
+						<div class="prevention__table-row">
+							<div class="prevention__table-col">Діти віком 7–12 років</div>
+							<div class="prevention__table-col">по 15 мл 7-10 діб</div>
+						</div>
+						<div class="prevention__table-row">
+							<div class="prevention__table-col">Дорослі і діти віком від 12 років</div>
+							<div class="prevention__table-col">по 20 мл при інфекціях 7-10 діб</div>
+						</div>
+						<div class="prevention__table-row">
+							<div class="prevention__table-col">Дорослі і діти віком від 12 років</div>
+							<div class="prevention__table-col">по 45 мл при сечокам’яній хворобі 2-4 тижні</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="health">
+		<div class="health__plant">
+			<img src="img/health-plant.png" alt="Тутукон">
+		</div>
+		<div class="container">
+			<div class="section-title">
+				<img src="img/logo.svg" alt="Тутукон"> - ДЛЯ ТИХ, ХТО ПІКЛУЄТЬСЯ ПРО СВОЄ ЗДОРОВ’Я
+			</div>
+			<div class="health__buttons">
+				<div class="health__btn"><button class="button" type="button">Про хворобу</button></div>
+				<div class="health__btn"><button class="button" type="button">Симптомы</button></div>
+				<div class="health__btn active"><button class="button" type="button">Профілактика</button></div>
+			</div>
+			<div class="health__item">
+				<div class="health__item-top">
+					<div class="health__item-tab">СЕЧОКАМ’ЯНА ХВОРОБА</div>
+					<div class="health__item-tab active">Інфекції Сечовивідних шляхів</div>
+				</div>
+				<div class="health__item-content">
+					<div class="health__subtitle">Загальні поради при інфекції сечовивідних шляхів:</div>
+					<ul class="health__list">
+						<li>дієта: необхідно виключити гострі, солоні, жирні продукти</li>
+						<li>водно-питний режим: випивати мінімум півтора літра рідини на день</li>
+						<li>піклуватись про себе: уникати переохолодження, не вживати алкогольних
+							напоїв, уникати контакту з хворими на грип та ГРВІ</li>
+					</ul>
+					<div class="health__subtitle">Спеціальні поради при інфекції сечовивідних шляхів:</div>
+					<ul class="health__list">
+						<li>своєчасно проходити обстеження у лікаря, особливо при наявності хронічної патології та в період вагітності</li>
+						<li>обов’язково необхідний лабораторний контроль: аналіз сечі, крові, УЗД сечостатевої системи (за призначенням лікаря)</li>
+						<li>при гострих та хронічних інфекціях сечовивідних шляхів застосовуйте <img src="img/logo.svg" alt="Тутукон"> у відповідній дозі та достатнім курсом
+							прийому (за призначенням лікаря)</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="contact">
+		<div class="container">
+			<div class="section-title">Залишилися питання?</div>
+			<div class="contact__row">
+				<div class="contact__left">
+					<div class="contact__img">
+						<img src="img/header-img.png" alt="Тутукон">
+					</div>
+					<div class="contact__btn">
+						<a href="#" class="button">Придбати on-line</a>
+					</div>
+				</div>
+				<div class="contact__right">
+					<div class="contact__title">УНІКАЛЬНА МОЖЛИВІСТЬ БЕЗКОШТОВНО</div>
+					<div class="contact__subtitle">проконсультуватися з лікарем УРОЛОГОМ</div>
+					<div class="contact__form-title">Залиште  контакти і незабаром Вам зателефонує спеціаліст</div>
+					<form action="#" class="contact__form">
+						<div class="contact__form-row">
+							<div class="contact__form-inputs">
+								<input type="text" class="contact__form-item" placeholder="Ваше ім’я">
+								<input type="tel" class="contact__form-item" placeholder="+380 _ _ _ _ _ _ _ _ _">
+							</div>
+							<input type="submit" class="button" value="Замовити консультацію">
+						</div>
+						<div class="contact__form-checkbox-wrap">
+							<input id="check-agree" type="checkbox">
+							<label for="check-agree">Погоджуюся з правами використання персональних даних відповідно до Угоди про конфіденційність і приймаю її умови</label>
+						</div>
+					</form>
+					<div class="contact__phone">
+						Або <b>зателефонуйте за номером</b> <a href="tel:8 800 000000">8 800 000000</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__img">
+				<img src="img/footer-img.png" alt="Тутукон">
+			</div>
+			<div class="footer__text">
+				Представництво  Гранд Медикал Груп АГ в Україні, 04112 м. Київ, Дегтярівська, 62  Тел. (044) 209-95-47 
+				<a href="#">www.grandmedicalgroup.ch</a> Виробник, країна:  МІГУЕЛЬ І ГАРРІГА С.А., Хоакін Коста, 18, 1а, 08390, Монтгат, Барселона, Іспанія 
+			</div>
+			<div class="footer__links">
+				<a href="#">Умови використання сайту</a>
+				<a href="#">Політика конфіденційності</a>
+			</div>
+		</div>
+	</footer>
 	
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<script src="js/common.js"></script>
